gcc/testsuite/g++.dg/modules/redecl-1_b.C
// { dg-additional-options -fmodules-ts }
import foo;

int Foo::foo() // { dg-error "conflicts with import" }
{
  return 1;
}

